# twitter-bookmarks-to-csv

./: CHANGELOG.md  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
tests/: sample.json  test_twitter_bookmarks_to_csv.py
twitter_bookmarks_to_csv/: __init__.py  app.py
twitter_bookmarks_to_csv/templates/: base.html  index.html  table.html
